# G-manga

./: .env.example  .gitignore  FRAMEWORK.md  LOGGING_GUIDE.md  PROGRESS.md  PROGRESS_LOG.json  README.md  SETUP_COMPLETE.md  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  STAGE3_PROGRESS.md  STAGE5_COMPLETE.md  STORYBOARD_IMPLEMENTATION.md  TASK_BREAKDOWN.md  assembly.py  character_rules_test.json  config.yaml  demo_pipeline.py  extract_batch.py  extract_chapter1.py  extract_final.py  extract_full.py  extract_robust.py  generate_all_character_images.py  generate_chapter1_flux.py  generate_character_images.py  generate_character_ref_sheets.py  generate_flux_pages.py  generate_mock_pages.py  layout_templates_test.json  llm-call-points.md  main.py  progress_logger.py  project-framework.md  pyproject.toml  requirements.txt  review_notes_stage8_test.md  review_notes_test.md  run_chapter3_scene3_aurora.py  run_stage6_batch.py  (+11 more)
docs/: API_KEY_POLICY.md  IMAGE_GENERATION.md  IMPLEMENTATION_SUMMARY.md
projects/demo-dorian-gray-20260202/: config.json  state.json
projects/dorian-gray-20260202/: config.json  state.json
projects/test-dorian-gray-20260202/: config.json  state.json
projects/test-stage5-integration/: test_export_panel.json
scripts/: character_consistency.py  character_consistency_helper.py
src/: __init__.py  __main__.py  cli.py  config.py  progress_logger.py
src/api/: __init__.py
src/common/: __init__.py  llm_factory.py  log_completion.py  logging.py  mocking.py  openrouter.py  zai_client.py
src/models/: project.py
src/stage1_input/: __init__.py  chapter_segmenter.py  ingestion_state.py  project.py  (+3 more)
tests/: test_dalle_provider.py  test_image_validator.py  test_project_model.py  test_sdxl_provider.py  test_stage1_input.py  test_stage2_preprocessing.py  test_stage3_modules.py  test_stage3_story.py  test_stage5_integration.py  test_stage5_panel_builder.py  test_stage6_integration.py  test_stage6_integration_fixed.py  test_stage6_integration_v2.py  test_stage7_integration.py  test_stage8_integration.py  test_stage9_output.py
(+92 files in other folders)
