[tool.poetry]
name = "g-manga"
version = "0.1.0"
description = "Transform Project Gutenberg literature into manga-styled comics"
authors = ["sqryxz <sqryxz@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/sqryxz/G-manga"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pydantic = "^2.0.0"
typer = "^0.9.0"
rich = "^13.0.0"
Pillow = "^10.0.0"
orjson = "^3.9.0"
tqdm = "^4.65.0"
httpx = "^0.25.0"  # For async HTTP requests

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
mypy = "^1.0.0"
black = "^23.0.0"
ruff = "^0.1.0"
pre-commit = "^3.0.0"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
